name:                hperf
version:             0.1.0.0
license:             AllRightsReserved
author:              Reid Draper
maintainer:          reiddraper@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable hperf
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  build-depends:       base >=4.7 && <4.8
                     , network == 2.5.*
                     , bytestring == 0.10.*
                     , entropy == 0.3.*

  default-language:    Haskell2010
  ghc-options: -Wall -Werror -O3
